--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,35 @@
-%h2 Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, required: true, autofocus: true
-    = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable)
-    = f.input :password_confirmation, required: true
-  .form-actions
-    = f.button :submit, "Sign up"
-= render "devise/shared/links"
+- provide :title, "Inscription"
+- provide :background, "light-green"
+
+.container
+  %br
+  .row
+    .col.s12.m6.offset-m3.z-depth-1.white
+      .sign-in-card
+        .center.logo
+          = image_tag "hobbes_logo_only.png", class: :'responsive-img'
+          %h4.light-green-text.darken-1 Inscription
+          %h6.grey-text Hobbes &middot; Acc&egrave;s &agrave; la communaut&eacute;
+        %br
+
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+          .row.form-inputs
+            = f.error_notification
+            .row
+              .col.s12
+                = f.input :email, required: true, autofocus: true
+            .row
+              .col.s12
+                = f.input :password, required: true #, hint: ("#{@minimum_password_length} characters minimum" if @validatable)
+            .row
+              .col.s12
+                = f.input :password_confirmation, required: true
+          .row.form-actions
+            .col.s12
+              = button_tag(type: 'submit', class: "btn btn-flat btn-large white-text brown col s12") do
+                Inscription
+                %i.mdi-content-send
+
+          .row
+            .col
+              = render "devise/shared/links"
