--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,21 +1,21 @@
 - if controller_name != 'sessions'
-  = link_to "Déjà inscrit ? Connexion", new_session_path(resource_name), class: :'grey-text darken-3'
+  = link_to "Déjà inscrit ? Connexion", new_session_path(resource_name), class: :'grey-text'
   %br/
 
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Pas encore inscrit ? Inscription", new_registration_path(resource_name), class: :'grey-text darken-3'
+  = link_to "Pas encore inscrit ? Inscription", new_registration_path(resource_name), class: :'grey-text'
   %br/
 
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to "Mot de passe oublié", new_password_path(resource_name), class: :'grey-text darken-3'
+  = link_to "Mot de passe oublié", new_password_path(resource_name), class: :'grey-text'
   %br/
 
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
-  = link_to "Vous n'avez pas reçu le courriel de confirmation ?", new_confirmation_path(resource_name), class: :'grey-text darken-3'
+  = link_to "Vous n'avez pas reçu le courriel de confirmation ?", new_confirmation_path(resource_name), class: :'grey-text'
   %br/
 
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to "Vous n'avez pas reçu les instructions de déverrouillage ?", new_unlock_path(resource_name), class: :'grey-text darken-3'
+  = link_to "Vous n'avez pas reçu les instructions de déverrouillage ?", new_unlock_path(resource_name), class: :'grey-text'
   %br/
 
 - if devise_mapping.omniauthable?
@@ -25,6 +25,3 @@
   = link_to "Se connecter avec Facebook", omniauth_authorize_path(resource_name, "facebook"), :class => "btn btn-flat blue btn-large darken-4 white-text col s12"
   = link_to "Se connecter avec LinkedIn", omniauth_authorize_path(resource_name, "linkedin"), :class => "btn btn-flat btn-large blue white-text col s12"
   = link_to "Se connecter avec Github", omniauth_authorize_path(resource_name, "github"), :class => "btn btn-flat btn-large grey lighten-1 white-text col s12"
-  -# - resource_class.omniauth_providers.each do |provider|
-  -#   = link_to "Se connecter avec #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), :class => "grey-text darken-3"
-  -#   %br
