--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,8 +1,94 @@
 footer {
   margin-top: 0;
+  padding-top: 25px;
+  font-family: "Open Sans";
+
+  .utilities {
+    padding: 25px;
+    margin-bottom: 30px;
+  }
+
+  .links {
+    font-weight: 400;
+    text-transform: lowercase;
+    font-variant: small-caps;
+    // padding: 15px 0;
+
+    a {
+      &:hover {
+        color: #888 !important;
+      }
+    }
+
+    h5 {
+      font-weight: 700;
+    }
+  }
+
+  .footer-copyright {
+    background: #333;
+    padding: 25px 0;
+
+    .copy {
+      padding-top: 15px;
+    }
+
+    .name {
+      color: #666;
+      font-weight: 700;
+      text-transform: lowercase;
+      font-variant: small-caps;
+      font-size: 2.5em;
+      letter-spacing: 0.05em;
+
+      &:hover {
+        color: #777;
+      }
+    }
+
+    .authors {
+      margin: 0;
+      padding: 0;
+      margin-top: -10px;
+      height: auto;
+      line-height: normal;
+
+      li {
+        display: inline-block;
+        padding: 0;
+        margin: 0;
+        padding-right: 15px;
+        line-height: normal;
+
+        a {
+          color: #666;
+          font-weight: 600;
+          text-transform: lowercase;
+          font-variant: small-caps;
+          font-size: 1.2em;
+          padding: 0;
+          margin: 0;
+
+          &:hover {
+            color: #777;
+          }
+        }
+      }
+    }
+  }
 }
 
 .footer-off footer {
   display: none;
   visibility: hidden;
 }
+
+@media (min-width: 601px) {
+  footer
+  {
+    .links {
+      text-align: right;
+    }
+  }
+}
+
