Add waves effects to providers buttons

--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -21,7 +21,7 @@
 - if devise_mapping.omniauthable?
   %hr
   %br
-  = link_to "Se connecter avec Google", omniauth_authorize_path(resource_name, "google_oauth2"), :class => "btn btn-flat btn-large red white-text col s12"
-  = link_to "Se connecter avec Facebook", omniauth_authorize_path(resource_name, "facebook"), :class => "btn btn-flat blue btn-large darken-4 white-text col s12"
-  = link_to "Se connecter avec LinkedIn", omniauth_authorize_path(resource_name, "linkedin"), :class => "btn btn-flat btn-large blue white-text col s12"
-  = link_to "Se connecter avec Github", omniauth_authorize_path(resource_name, "github"), :class => "btn btn-flat btn-large grey lighten-1 white-text col s12"
+  = link_to "Se connecter avec Google", omniauth_authorize_path(resource_name, "google_oauth2"), :class => "btn btn-flat btn-large red white-text col s12 waves-effect waves-light"
+  = link_to "Se connecter avec Facebook", omniauth_authorize_path(resource_name, "facebook"), :class => "btn btn-flat blue btn-large darken-4 white-text col s12 waves-effect waves-light"
+  = link_to "Se connecter avec LinkedIn", omniauth_authorize_path(resource_name, "linkedin"), :class => "btn btn-flat btn-large blue white-text col s12 waves-effect waves-light"
+  = link_to "Se connecter avec Github", omniauth_authorize_path(resource_name, "github"), :class => "btn btn-flat btn-large grey lighten-1 white-text col s12 waves-effect waves-light"
