--- a/app/views/pages/community.html.haml
+++ b/app/views/pages/community.html.haml
@@ -1,1 +1,13 @@
-%h1 Communaut&eacute;
+- provide :title, "Communauté"
+- provide :desc, "rejoindre la communauté"
+
+= render 'shared/pages/band'
+
+%section
+  .container
+    .row
+      %p
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+        no sea takimata sanctus est Lorem ipsum dolor sit amet.
