--- a/app/views/pages/guides/index.html.haml
+++ b/app/views/pages/guides/index.html.haml
@@ -1,1 +1,13 @@
-%h1 Guides
+- provide :title, 'Guides'
+- provide :desc, "guides d'utilisation Hobbes"
+
+= render 'shared/pages/band_guides'
+
+%section
+  .container
+    .row
+      %p
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+        no sea takimata sanctus est Lorem ipsum dolor sit amet.
