--- a/app/views/pages/infos.html.haml
+++ b/app/views/pages/infos.html.haml
@@ -1,2 +1,13 @@
+- provide :title, "Infos"
+- provide :desc, "en savoir plus sur Hobbes"
+
+= render 'shared/pages/band'
+
 %section
-  %h1 Infos
+  .container
+    .row
+      %p
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+        no sea takimata sanctus est Lorem ipsum dolor sit amet.
