Home page minor fix

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -136,5 +136,5 @@
       %hr
       .col.s12.center
         %p Alors, convaincu ?
-        %a{href: page_path('guides'), class: :'waves-effect waves-light btn btn-flat btn-large light-green btn-background-green white-text'}
+        %a{href: page_path('download'), class: :'waves-effect waves-light btn btn-flat btn-large light-green btn-background-green white-text'}
           je t&eacute;l&eacute;charge hobbes
