--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,18 +1,76 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, required: true, autofocus: true
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-      %p
-        Currently waiting confirmation for: #{resource.unconfirmed_email}
-    = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
-    = f.input :password_confirmation, required: false
-    = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
-  .form-actions
-    = f.button :submit, "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+- title = @user.name.blank? ? @user.email : @user.name
+- provide :title, "Éditer le profil"
+- provide :desc, 'modification du profil utilisateur de ' + title
+
+= render 'shared/pages/band'
+
+%section.profil
+  .container
+    .row
+      .col.s12.offset-m3.offset-s4
+        = link_to "Profil actuel", user_path(@user.id), class: :'light-green-text'
+      .col.s4.offset-m1.m2
+        = link_to (image_tag avatar_url(@user, 110), class: :'circle responsive-img tooltipped', 'data-tooltip' => 'Modifier sur Gravatar'), "https://fr.gravatar.com/emails/", target: :_blank
+      .col.s8.m8.infos
+        %h5= @user.name.blank? ? 'Nom non renseigné' : @user.name
+        %h6.grey-text= @user.email
+        %h6.grey-text.hide-on-small-only
+          %span.tooltipped{'data-tooltip' => 'Localisation'}
+            %i.mdi-maps-place
+            France
+          &nbsp;
+          %span.tooltipped{'data-tooltip' => 'Site web'}
+            %i.mdi-social-public
+            %a.grey-text{:href => 'http://foo.fr'} foo.fr
+          &nbsp;
+          %span.tooltipped{'data-tooltip' => 'Dernière connexion'}
+            %i.mdi-action-history
+            = distance_of_time_in_words @user.last_sign_in_at, Time.now
+    %br
+    .row
+      .col.s12.offset-m1.m10
+        %hr
+
+    %br
+    .row
+      .col.s12.offset-m1.m6
+        %h5 Modifier les informations
+        %br
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+          = f.error_notification
+          .row.form-inputs
+            .row
+              .col.s12
+                = f.input :email, required: true, autofocus: false
+            .row
+              .col.s12
+                = f.input :name, required: false
+            .row
+              .col.s12
+                = f.input :password, autocomplete: "off"# hint: "laissez blanc pour laisser tel quel", required: false
+            .row
+              .col.s12
+                = f.input :password_confirmation, required: false
+            %br
+            .row
+              .col.s12
+                = f.input :current_password, required: true
+          .row.form-actions
+            .col.s12
+              = link_to "#", class: :'submit btn btn-flat btn-large white-text brown col s12 btn-background-brown waves-effect waves-light', 'data-id' => 'edit_user' do
+                Confirmer
+                %i.mdi-content-send
+              = button_tag(type: 'submit', class: "submit btn btn-flat btn-large white-text brown col s12 btn-background-brown") do
+                Confirmer
+                %i.mdi-content-send
+      .col.s12.m4.text-right
+        %h5 Supprimer mon compte
+        %p
+          Attention, cette action est irr&eacute;versible !
+        = link_to registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?" }, method: :delete, :class => 'white-text btn btn-flat red darken-1 waves-effect waves-light' do
+          %i.mdi-alert-warning
+          &nbsp;
+          Supprimer
+
+:javascript
+  document.getElementById("edit_user").classList.remove("col")
